syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.keepreal.madagascar.vanga";

import "common.proto";
import "balance.proto";

message CreateWithdrawRequest {
  string userId = 1;
  uint64 withdrawAmountInCents = 2;
}

message SubscribeMembershipRequest {
  string userId = 1;
  string membershipSkuId = 2;
}

message WechatOrderMessage {
  string id = 1;
  string tradeNumber = 2;
  string nonceStr = 3;
  string appId = 4;
  string partnerId = 5;
  string prepayId = 6;
  string signature = 7;
  string userId = 8;
  uint64 feeInCents = 9;
  uint64 timestamp = 10;
  WechatOrderState state = 11;
}

enum WechatOrderState {
  WECHAT_ORDER_STATE_UNKNOWN = 0;
  WECHAT_ORDER_STATE_NOTPAY = 1;
  WECHAT_ORDER_STATE_USERPAYING = 2;
  WECHAT_ORDER_STATE_SUCCESS = 3;
  WECHAT_ORDER_STATE_CLOSED = 4;
  WECHAT_ORDER_STATE_REFUND = 5;
  WECHAT_ORDER_STATE_PAYERROR = 6;
  WECHAT_ORDER_STATE_REVOKED = 7;
  WECHAT_ORDER_STATE_REFUNDED = 8;
}

message WechatOrderResponse {
  CommonStatus status = 1;
  WechatOrderMessage wechatOrder = 2;
}

message RetrieveWechatOrderByIdRequest {
  string id = 1;
}

service PaymentService {
  rpc CreateWithdrawPayment (CreateWithdrawRequest) returns (BalanceResponse) {};
  rpc SubscribeMembershipWithShell (SubscribeMembershipRequest) returns (CommonStatus) {};
  rpc SubmitSubscribeMembershipWithWechatPay (SubscribeMembershipRequest) returns (WechatOrderResponse) {};
  rpc RetrieveWechatOrderById (RetrieveWechatOrderByIdRequest) returns (WechatOrderResponse) {};
}